# slack-shield

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: BLOGPOST.md  affected.html  index.html
src/slack_shield/: __init__.py  backfill.py  cli.py  client.py  limiter.py
tests/: test_backfill.py  test_client.py  test_limiter.py
