[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-shield"
version = "0.1.0"
description = "Slack history backfill that respects the 1 req/min rate limit for unlisted apps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anton Zaytsev", email = "anton.a.zaytsev@gmail.com" }]
keywords = ["slack", "rate-limit", "backfill", "export", "history", "etl", "conversations.history"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.scripts]
slack-shield = "slack_shield.cli:main"

[project.urls]
Homepage = "https://github.com/rozetyp/slack-shield"
Repository = "https://github.com/rozetyp/slack-shield"
Issues = "https://github.com/rozetyp/slack-shield/issues"
Changelog = "https://github.com/rozetyp/slack-shield/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_shield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]
